# HookZz

./: CMakeLists.txt
cmake/: Macros.cmake
include/: hookzz.h
src/: closure_bridge.c  closure_bridge.h  closurebridge.h  core.h  debuglog.c  debuglog.h  hookzz.c  interceptor.c  interceptor.h  interceptor_routing.c  interceptor_routing.h  interceptor_routing_trampoline.c  interceptor_routing_trampoline.h  logging.h  macros.h  memory_manager.c  memory_manager.h
src/std_kit/: std_buffer_array.c  std_buffer_array.h  std_kit.c  std_kit.h  std_list.c  std_list.h
src/thread_support/: thread_local_storage.h  thread_stack.c  thread_stack.h
srcxx/: ClosureBridge.h  Interceptor.cpp  Interceptor.h  InterceptorBackend.cpp  InterceptorBackend.h  InterceptorRouting.cpp  InterceptorRoutingTrampoline.cpp  Invocation.cpp  Invocation.h  Macros.h  MemoryManager.cpp  MemoryManager.h  StackManager.cpp  Trampoline.h  hookzz.cpp
srcxx/CommonClass/: Manager.cpp  Manager.h
srcxx/CommonClass/DesignPattern/: Singleton.cpp  Singleton.h
tests/c/: CMakelists.txt  hookzz_test.cpp  hookzz_test_exe.cpp
